--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   table_calendar: ^3.1.3
   google_fonts: ^6.2.0
   fl_chart: ^1.1.0
+  percent_indicator: ^4.2.5
 
 dev_dependencies:
   flutter_test:
