--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   google_fonts: ^6.2.0
   fl_chart: ^1.1.0
   percent_indicator: ^4.2.5
+  just_audio: ^0.10.5
 
 dev_dependencies:
   flutter_test:
