--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,4 +23,7 @@ dev_dependencies:
   flutter_lints: ^5.0.0
 
 flutter:
+  assets:
+    - assets/sounds/timer_sounds/
+
   uses-material-design: true
