feat<alerts>: Se agregaron las alarmas para notifica el término del timer entre sets.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   fl_chart: ^1.1.0
   percent_indicator: ^4.2.5
   just_audio: ^0.10.5
+  alarm: ^5.1.5
+  permission_handler: ^12.0.1
+  logger: ^2.6.1
 
 dev_dependencies:
   flutter_test:
