--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   alarm: ^5.1.5
   permission_handler: ^12.0.1
   logger: ^2.6.1
+  smooth_page_indicator: ^1.2.1
 
 dev_dependencies:
   flutter_test:
