--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   permission_handler: ^12.0.1
   logger: ^2.6.1
   smooth_page_indicator: ^1.2.1
+  flutter_bloc: ^9.1.1
 
 dev_dependencies:
   flutter_test:
